--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             <h1>Trisha Ann Pelonis</h1>
             <h2 class="text-muted">Aspiring Full Stack Developer</h2>
             <button type="button" class="btn btn-secondary">
-              <a href="" class="nav-link">View CV</a>
+              <a href="Pelonis-CV (1).pdf" class="nav-link" target="_blank"
+                >View CV</a
+              >
             </button>
           </div>
           <div class="col col-md-6 mt-5">
