--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="home" class="container-fluid pb-5">
       <div class="container text-center py-5">
         <div class="row align-items-center mt-5">
-          <div class="col col-md-6 mt-5">
+          <div class="col col-md-3 col sm-5">
             <p>Hello!! I'm</p>
             <h1>Trisha Ann Pelonis</h1>
             <h2 class="text-muted">Aspiring Full Stack Developer</h2>
@@ -66,7 +66,7 @@
           </div>
           <div class="col col-md-6 mt-5">
             <img
-              src="img/gwapako-removebg-preview.png"
+              src="gwapako-fotor-20231009143939.png"
               alt="circle"
               class="img-fluid"
             />
@@ -91,13 +91,7 @@
             </p>
           </div>
           <div class="col">
-            <img
-              src="pitik.jpg"
-              class="rounded float-end"
-              alt=""
-              height="300px"
-              width="300px"
-            />
+            <img src="pitik.jpg" class="rounded float-end" alt="" />
           </div>
         </div>
       </div>
