--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="pitik.jpg" class="rounded float-end" alt="" />
+            <img src="pitik.jpg" class="rounded m-3 custom-img" />
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
             <div class="row align-items-center">
               <div class="col-lg pb-4">
                 <img
-                  class="rounded m-3"
+                  class="rounded m-3 custom-img"
                   src="HTML.CERT.jpg"
                   height="300"
                   width="300"
@@ -117,7 +117,7 @@
               </div>
               <div class="col-lg pb-4">
                 <img
-                  class="rounded m-3"
+                  class="rounded m-3 custom-img"
                   src="CSS.CERT.jpg"
                   height="300"
                   width="300"
