--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
                 <img
                   class="rounded m-3 custom-img"
                   src="HTML.CERT.jpg"
-                  height="300"
-                  width="300"
+                  height="200"
+                  width="200"
                 />
               </div>
               <div class="col-lg pb-4">
                 <img
-                  class="rounded m-3 custom-img"
+                  class="img-fluid rounded m-3 custom-img"
                   src="CSS.CERT.jpg"
-                  height="300"
-                  width="300"
+                  height="200"
+                  width="200"
                 />
               </div>
             </div>
