--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="pitik.jpg" class="rounded m-3 custom-img" />
+            <img src="pitik.jpg" class="img-fluid m-3 custom-img" />
           </div>
         </div>
       </div>
@@ -109,7 +109,7 @@
             <div class="row align-items-center">
               <div class="col-lg pb-4">
                 <img
-                  class="rounded m-3 custom-img"
+                  class="img-fluid m-3 custom-img"
                   src="HTML.CERT.jpg"
                   height="200"
                   width="200"
