--- a/index.html
+++ b/index.html
@@ -65,11 +65,7 @@
             </button>
           </div>
           <div class="col col-md-6 mt-5">
-            <img
-              src="gwapako-fotor-20231009143939.png"
-              alt="circle"
-              class="img-fluid"
-            />
+            <img src="gwapako-fotor-20231009143939.png" alt="circle" />
           </div>
         </div>
       </div>
@@ -91,7 +87,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="pitik.jpg" class="img-fluid m-3 custom-img" />
+            <img src="pitik.jpg" class="img-fluid m-3" />
           </div>
         </div>
       </div>
@@ -109,7 +105,7 @@
             <div class="row align-items-center">
               <div class="col-lg pb-4">
                 <img
-                  class="img-fluid m-3 custom-img"
+                  class="img-fluid m-3"
                   src="HTML.CERT.jpg"
                   height="300"
                   width="300"
@@ -117,7 +113,7 @@
               </div>
               <div class="col-lg pb-4">
                 <img
-                  class="img-fluid rounded m-3 custom-img"
+                  class="img-fluid rounded m-3"
                   src="CSS.CERT.jpg"
                   height="300"
                   width="300"
