--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
             </button>
           </div>
           <div class="col col-md-6 mt-5">
-            <img src="gwapako-fotor-20231009143939.png" alt="circle" />
+            <img
+              src="gwapako-fotor-20231009143939.png"
+              alt="circle"
+              class="img-fluid"
+            />
           </div>
         </div>
       </div>
@@ -87,7 +91,7 @@
             </p>
           </div>
           <div class="col">
-            <img src="pitik.jpg" class="img-fluid m-3" />
+            <img src="pitik.jpg" class="img-fluid m-3 custom-img" />
           </div>
         </div>
       </div>
@@ -105,7 +109,7 @@
             <div class="row align-items-center">
               <div class="col-lg pb-4">
                 <img
-                  class="img-fluid m-3"
+                  class="img-fluid m-3 custom-img"
                   src="HTML.CERT.jpg"
                   height="300"
                   width="300"
@@ -113,7 +117,7 @@
               </div>
               <div class="col-lg pb-4">
                 <img
-                  class="img-fluid rounded m-3"
+                  class="img-fluid rounded m-3 custom-img"
                   src="CSS.CERT.jpg"
                   height="300"
                   width="300"
