--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <!--end of about section-->
       <!--educational background section-->
       <section id="educ_background"  class="container-fluid bg-secondary-subtle">
-      <div class="container">
+      <div class="container pb-5">
         <h1 class="text-primary fw-bold text-center section-padding">Educational Attainment</h1>
         <div class="row justify-content-center pt-md-5 pt-sm-3">
           <!--elementary-->
@@ -99,7 +99,7 @@
             <div class="card-body">
               <h5 class="card-title text-center text-primary fw-bold">Elementary</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary text-center">(2014 - 2015)</h6>
-              <p class="card-text pt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text pt-3">I graduated at Pigdaulan Elementary School.</p>
             </div>
           </div>
           <!--end of elementary-->
@@ -108,7 +108,7 @@
             <div class="card-body">
               <h5 class="card-title text-primary text-center fw-bold">Junior Highschool</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary text-center">(2018 - 2019)</h6>
-              <p class="card-text pt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text pt-3">I took my junior highschool degree at Pigdaulan National Highschool</p>
             </div>
           </div>
           <!--end of junior highschool-->
@@ -117,7 +117,7 @@
             <div class="card-body">
               <h5 class="card-title text-primary text-center fw-bold">Senior Highschool</h5>
               <h6 class="card-subtitle mb-2 text-body-secondary text-center">(2020 - 2021)</h6>
-              <p class="card-text pt-3">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text pt-3">I graduated at Alviola National Highschool</p>
             </div>
           </div>
           <!--end of senior highschool-->
