--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
       <!--end of certificates section-->
       <!--contact section-->
       <section id="contact" class="container-fluid bg-primary pb-1">
-        <div class="container">
-          <h1 class="text-center text-white pt-4 fw-bold">Contact</h1>
+        <div class="container pt-3">
+          <h1 class="text-center text-white pt-5 fw-bold">Contact</h1>
           <h2 class="text-start text-white pt-3">Get in Touch</h2>
           <div class="row align-items-center text-center pb-1">
             <div class="col-md-6 text-start">
